--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.lokasi_part.AturLokasiPart_Activity"></activity>
+        <activity android:name=".modules.lokasi_part.Penyesuain_Activity"></activity>
+        <activity android:name=".modules.lokasi_part.stock_opname.StockOpname_Activity" />
+        <activity android:name=".modules.lokasi_part.AturLokasiPart_Activity" />
+        <activity android:name=".modules.lokasi_part.LokasiPart_Activity" />
         <activity android:name=".modules.AturBiayaMekanik2" />
         <activity android:name=".modules.BiayaMekanik2Activity" />
         <activity android:name=".gmod.PengambilanPartActivity" />
@@ -43,7 +46,6 @@
         <activity android:name=".gmod.Stock_OpnameActivity" />
         <activity android:name=".gmod.Penampung_Item_DetailActivity" />
         <activity android:name=".gmod.AturPenugasan_Activity" />
-        <activity android:name=".modules.lokasi_part.LokasiPart_Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
