--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rkrzmail.oto">
 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
@@ -23,9 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.lokasi_part.AturLokasiPart_Activity"></activity>
-        <activity android:name=".modules.AturBiayaMekanik2" />
-        <activity android:name=".modules.BiayaMekanik2Activity" />
+        <activity android:name=".modules.terima_part.TerimaPart"></activity>
+        <activity android:name=".modules.lokasi_part.AturLokasiPart_Activity" />
+        <activity android:name=".modules.terima_part.AturTerimaPart" />
+        <activity android:name=".modules.terima_part.DetailPartDiterima" />
+        <activity android:name=".modules.biayamekanik.AturBiayaMekanik2" />
+        <activity android:name=".modules.biayamekanik.BiayaMekanik2Activity" />
         <activity android:name=".gmod.PengambilanPartActivity" />
         <activity android:name=".gmod.DaftarTugasPartActivity" />
         <activity android:name=".gmod.JumlahPartActivity" />
@@ -212,5 +203,17 @@
             </intent-filter>
         </service>
     </application>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
 </manifest>
