--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rkrzmail.oto">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
@@ -11,10 +23,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".modules.lokasi_part.Penyesuain_Activity"/>
-        <activity android:name=".modules.lokasi_part.stock_opname.StockOpname_Activity"/>
-        <activity android:name=".modules.terima_part.TerimaPart"></activity>
+        <activity android:name=".modules.layanan.AturLayanan_Activity"></activity>
+        <activity android:name=".modules.layanan.Layanan_Avtivity" />
+        <activity android:name=".modules.jurnal.Pembayaran_Activity" />
+        <activity android:name=".modules.jurnal.AturJurnal_Activity" />
+        <activity android:name=".modules.jurnal.DaftarJurnal_Activity" />
+        <activity android:name=".modules.lokasi_part.Penyesuain_Activity" />
+        <activity android:name=".modules.lokasi_part.stock_opname.StockOpname_Activity" />
+        <activity android:name=".modules.terima_part.TerimaPart" />
         <activity android:name=".modules.lokasi_part.AturLokasiPart_Activity" />
         <activity android:name=".modules.terima_part.AturTerimaPart" />
         <activity android:name=".modules.terima_part.DetailPartDiterima" />
@@ -206,17 +222,5 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
 </manifest>
