--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -23,7 +24,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.lokasi_part.CariPart_Activity"></activity>
+        <activity android:name=".modules.booking.Booking_Activity"></activity>
+        <activity android:name=".modules.tenda.AturTenda_Activity" />
+        <activity android:name=".modules.tenda.Tenda_Activity" />
+        <activity android:name=".modules.lokasi_part.CariPart_Activity" />
         <activity android:name=".modules.layanan.AturLayanan_Activity" />
         <activity android:name=".modules.layanan.Layanan_Avtivity" />
         <activity android:name=".modules.jurnal.Pembayaran_Activity" />
