--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.spotDiscount.AturDiscount_Activity"></activity>
-        <activity android:name=".modules.spotDiscount.SpotDiscount_Activity" />
+        <activity android:name=".modules.discount.AturSpotDiscount_Activity"></activity>
+        <activity android:name=".modules.discount.SpotDiscount_Activity" />
         <activity android:name=".modules.booking.Booking3_Activity" />
         <activity android:name=".modules.booking.Booking2_Activity" />
-        <activity android:name=".modules.booking.Booking1_Activity" />
+        <activity android:name=".modules.booking.Booking1B_Activity" />
+        <activity android:name=".modules.booking.Booking1A_Activity" />
         <activity android:name=".modules.tenda.AturTenda_Activity" />
         <activity android:name=".modules.tenda.Tenda_Activity" />
         <activity android:name=".modules.lokasi_part.CariPart_Activity" />
