--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.rekening_bank.AturRekening_Activity"/>
-        <activity android:name=".modules.rekening_bank.RekeningBank_Activity"/>
-        <activity android:name=".modules.discount.AturDiscountPart_Activity"/>
-        <activity android:name=".modules.discount.DiscountPart_Activity"/>
-        <activity android:name=".modules.discount.AturSpotDiscount_Activity"></activity>
+        <activity android:name=".modules.komisi.AturKomisiJasaLain_Activity"></activity>
+        <activity android:name=".modules.komisi.KomisiJasaLain_Activity" />
+        <activity android:name=".modules.komisi.AturKomisiLayanan_Activity" />
+        <activity android:name=".modules.komisi.KomisiLayanan_Activity" />
+        <activity android:name=".modules.discount.AturDiscountJasaLain_Activity" />
+        <activity android:name=".modules.discount.DiscountJasaLain_Activity" />
+        <activity android:name=".modules.discount.AturDiscountLayanan_Activity" />
+        <activity android:name=".modules.discount.DiscountLayanan_Activity" />
+        <activity android:name=".modules.layanan.DeskripsiLayanan_Activiy" />
+        <activity android:name=".modules.rekening_bank.AturRekening_Activity" />
+        <activity android:name=".modules.rekening_bank.RekeningBank_Activity" />
+        <activity android:name=".modules.discount.AturDiscountPart_Activity" />
+        <activity android:name=".modules.discount.DiscountPart_Activity" />
+        <activity android:name=".modules.discount.AturSpotDiscount_Activity" />
         <activity android:name=".modules.discount.SpotDiscount_Activity" />
         <activity android:name=".modules.booking.Booking3_Activity" />
         <activity android:name=".modules.booking.Booking2_Activity" />
