--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.komisi.AturKomisiJasaLain_Activity"></activity>
+        <activity android:name=".modules.booking.KontrolBooking_Activity"></activity>
+        <activity android:name=".modules.komisi.AturKomisiJasaLain_Activity" />
         <activity android:name=".modules.komisi.KomisiJasaLain_Activity" />
         <activity android:name=".modules.komisi.AturKomisiLayanan_Activity" />
         <activity android:name=".modules.komisi.KomisiLayanan_Activity" />
