--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".modules.hutang.PembayaranHutang_Activity"></activity>
+        <activity android:name=".modules.komisi.AturKomisiPart_Activity"></activity>
+        <activity android:name=".modules.komisi.KomisiPart_Activity" />
+        <activity android:name=".modules.pembayaran.AturPembayaranElektronik_Activity" />
+        <activity android:name=".modules.pembayaran.PembayaranElektronik_Activity" />
+        <activity android:name=".modules.sparepart.lokasi_part.stock_opname.HistoryStockOpname_Activity" />
+        <activity android:name=".modules.sparepart.DetailCariPart_Activity" />
+        <activity android:name=".modules.hutang.PembayaranHutang_Activity" />
         <activity android:name=".modules.hutang.Hutang_Activity" />
         <activity android:name=".modules.hutang.PembayaranPiutang_Activity" />
         <activity android:name=".modules.hutang.DetailPiutang_Activity" />
@@ -37,14 +43,14 @@
         <activity android:name=".modules.antar_jemput.ChecklistAntarJemput_Activity" />
         <activity android:name=".modules.antar_jemput.InformasiAntarJemput_Activity" />
         <activity android:name=".modules.antar_jemput.AntarJemput_Activity" />
-        <activity android:name=".modules.outsource.AturOutSource_Activity" />
-        <activity android:name=".modules.outsource.OutSource_Activity" />
+        <activity android:name=".modules.menunggu.AturOutSource_Activity" />
+        <activity android:name=".modules.menunggu.OutSource_Activity" />
         <activity android:name=".modules.inspection.InspectionFinal_Activity" />
         <activity android:name=".modules.collection.CashCollection_Activity" />
         <activity android:name=".modules.collection.Collection_Activity" />
-        <activity android:name=".modules.sparepart.menunggu_part.UpdatePartKosong_Activity" />
-        <activity android:name=".modules.sparepart.menunggu_part.StatusPartKosong_Activity" />
-        <activity android:name=".modules.sparepart.menunggu_part.MenungguPart_Activity" />
+        <activity android:name=".modules.menunggu.UpdatePartKosong_Activity" />
+        <activity android:name=".modules.menunggu.StatusPartKosong_Activity" />
+        <activity android:name=".modules.menunggu.MenungguPart_Activity" />
         <activity android:name=".modules.sparepart.terima_part.DetailTerimaPart_Activity" />
         <activity android:name=".modules.primary.checkout.AturCheckout_Activity" />
         <activity android:name=".modules.primary.checkout.CheckOut_Activity" />
