--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.rkrzmail.oto">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -18,12 +19,13 @@
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:icon="@drawable/speed"
+        android:label="Bengkel Pro"
+        android:roundIcon="@drawable/speed"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:replace="android:label">
         <activity android:name=".modules.primary.DetailKontrolBooking_Activity"></activity>
         <activity android:name=".modules.layanan.TambahLayanan" />
         <activity android:name=".modules.komisi.AturKomisiPart_Activity" />
