--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
         <activity android:name=".modules.mekanik.PerintahKerjaMekanik_Activity" />
         <activity android:name=".modules.bengkel.AturPembayaran_Activity" />
         <activity android:name=".modules.bengkel.Rincian_Pembayaran_Activity" />
-        <activity android:name=".modules.bengkel.Pembayaran_Activity" />
+        <activity android:name=".modules.bengkel.Pembayaran_MainTab_Activity" />
         <activity android:name=".modules.checkin.DetailKontrolLayanan_Activity" />
         <activity android:name=".modules.checkin.KontrolLayanan_Activity" />
         <activity android:name=".modules.checkin.Checkin4_Activity" />
