--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rkrzmail.oto">
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -55,7 +56,6 @@
         <activity android:name=".modules.antar_jemput.InformasiAntarJemput_Activity" />
         <activity android:name=".modules.antar_jemput.AntarJemput_Activity" />
         <activity android:name=".modules.sparepart.AturOutSource_Activity" />
-        <activity android:name=".modules.sparepart.OutSource_Activity" />
         <activity android:name=".modules.mekanik.InspeksiMekanik_Activity" />
         <activity android:name=".modules.bengkel.AturCollection_Activity" />
         <activity android:name=".modules.bengkel.Collection_Activity" />
