--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.rkrzmail.oto"
-        minSdkVersion 17
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -66,8 +66,10 @@ dependencies {
     implementation 'android.arch.navigation:navigation-ui:1.0.0'//minSdkVersion 17
     //custom toast
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
-//gif image lib for splashscreen
-implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    //progressBar Lib
+    implementation 'com.aseem.versatileprogressbar:MultiProgressBar:1.1.0'
+    //gif image lib for splashscreen
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
 }
 
