--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@
 # org.gradle.parallel=true
 #Sat Nov 07 01:37:20 ICT 2020
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.caching=true
